# rag_application_assistant

./: .gitignore  README.md  conftest.py  db.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analyzer/: tests.py  urls.py  views.py
core/: settings.py  urls.py
templates/analyzer/: index.html  payment_cancel.html  payment_sucess.html
