[project]
name = "rag-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.7",
    "django>=6.0.4",
    "djangorestframework>=3.17.1",
    "gunicorn>=25.3.0",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.12",
    "openai>=2.31.0",
    "pdfplumber>=0.11.9",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "python-dotenv>=1.2.2",
]
